criando exemplo de javascript

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Exemplo 3</title>
 </head>
 <body>
-    
+        <!-- chamando javascript com eventos -->
+         <button onclick="alert('Hellow World')">Clique</button>
+
+
+     <!-- chamando o javascript externo -->
+    <script src="./src/js/script.js" ></script>
 </body>
 </html>
